Fixed the text wrapping under the ckeckmark (section "business-plan") and added the scroll bar only when the box is too small (section "sponsor/teams")

--- a/css/global.css
+++ b/css/global.css
@@ -44,24 +44,28 @@ h4{
 }
 
 ul li{
-  list-style: none;
+  list-style: none outside;
+  
 }
 
 /* .nav-hover{
   display: none;
-}
-
-
-
+} */
 
 li:hover .nav-hover {
   display: block;
-} */
+}
 
 .nav-hover {
   position: absolute;
+  left:0;
+  top:79px;
 }
 
+
+.nav-support-links > li {
+  position: relative;
+}
 
 header .menu nav .nav-hover li {
   display: block;
